Fixed the doxygen main page

--- a/spel_dev/html/index.html
+++ b/spel_dev/html/index.html
@@ -66,10 +66,9 @@ $(function() {
 <div class="title">The Grand Arena </div>  </div>
 </div><!--header-->
 <div class="contents">
-<div class="textblock"><p>This project helps user to draw shapes. Currently two types of shapes can be drawn:</p><ul>
-<li>How to draw rectangle?</li>
-<li>How to draw circle? </li>
-</ul>
+<div class="textblock"><p>This is the documentation for the game The Grand Arena.</p>
+<p>This documentation is meant to serve as a thorough description of all classes and there respective member functions as well as describing there member variable.</p>
+<p>In each class description you will find the a uml diagram defining each class inheritance structure. </p>
 </div></div><!-- PageDoc -->
 </div><!-- contents -->
 <!-- start footer part -->
